History of this buildout
========================

5.1.14 (unreleased)
-------------------

- Add CT theme (folder)
  [coen]

- Rename werkveld > theme
  [coen]

- Add minaraad theme to project.
  [coen]

- Add upgrade step
- Remove portal action 'Mijn abonnementen'
- Remove configlet 'subscribers overview'
  [coen]

- Removed built-in newsletter functionality in favor of mailchimp
  [diederik]

- Pinned slightly newer AccessControl to get rid of starup errors.
  [coen]

- Create upgrade notes for upgrade to Plone 3.4.6.
  [coen]

- Merge minaraad.theme to src dir. All is now in one repository.
  [coen]

- Removed LinkedIn portlet.
  The portlet is also removed from the live site. No upgradestep needed.
  [coen]

- Updated pinnings to Plone 4.3.6
  [coen]

- Cleaned up the code: pyflakes, pep8, trailing white space.
  [maurits]

- Moved to git.  Temporary repo:
  git@bitbucket.org:zestsoftware/minaraad.git
  [maurits]


5.1.13 (2015-12-08)
-------------------

- Products.PloneHotfix20151208 1.0
  [maurits]


5.1.12 (2015-12-08)
-------------------

- Products.PloneHotfix20151208 1.1
  [maurits]


5.1.11 (2015-11-20)
-------------------

- Added ipdb.
  [maurits]

- Updated iPython.
  [maurits]


5.1.10 (2015-09-18)
-------------------

- Added UBUNTU-1404.rst with instructions on how to update the
  servers.
  [maurits]

- Updated several minor versions.
  [maurits]


5.1.9 (2015-09-10)
------------------

- Products.PloneHotfix20150910 1.1
  [maurits]


5.1.8 (2015-06-02)
------------------

- Add migration to fix summary mimetypes of existing agenda items.
  [maurits]

- When adding/editing an agenda item, set the mimetype to text/html.
  The add-form would show a rich text editor, but when you did not
  enter anything and later wanted to edit it again, you got a basic
  text area and you could not save changes anymore.
  [maurits]


5.1.7 (2015-05-27)
------------------

- Pillow 2.8.1.  You have to install an extra dependency first: