@@ -1,11 +1,6 @@
 import logging
-
 from Acquisition import aq_inner
-from Products.CMFCore.utils import getToolByName
 from Products.Five import BrowserView
-from Products.statusmessages.interfaces import IStatusMessage
-
-from Products.minaraad.themes import ThemeManager
 
 logger = logging.getLogger('configlets')
 
@@ -37,63 +32,3 @@ class AbstractView(BrowserView):
         pos = self.referring_url.find('?')
         if pos > -1:
             self.referring_url = self.referring_url[:pos]
-
-
-class MinaraadConfigletView(AbstractView):
-    """Configlet for a manager to manage themes.
-    """
-
-    def __init__(self, context, request):
-        AbstractView.__init__(self, context, request)
-        self.themeManager = ThemeManager(context)
-
-    def __call__(self):
-        request = self.request
-        response = request.response
-
-        if request.get('form.button.Add', None):
-            self._addTheme()
-            message = u"Thema toegevoegd"
-            IStatusMessage(request).addStatusMessage(message, type="info")
-            return response.redirect(self.referring_url)
-        elif request.get('form.button.Save', None):
-            self._saveThemes()
-            message = u"Thema opgeslagen"
-            IStatusMessage(request).addStatusMessage(message, type="info")
-            return response.redirect(self.referring_url)
-        elif request.get('form.button.Delete', None):
-            self._deleteThemes()
-            message = u"Thema verwijderd"
-            IStatusMessage(request).addStatusMessage(message, type="info")
-            return response.redirect(self.referring_url)
-
-        return self.index()
-
-    def themes(self):
-        items = self.themeManager.themes
-        isEditing = self.request.get('form.button.Edit', None) is not None
-        return [{'id': id, 'Title': title} for id, title in items
-                if (not isEditing) or self.request.get('theme_%i' % id, None)]
-
-    def showEditableFields(self):
-        return self.request.get('form.button.Edit', None) is not None
-
-    def _addTheme(self):
-        themeName = self.request.get('theme_name', None)
-        self.themeManager.addTheme(themeName)
-
-    def _saveThemes(self):
-        editedThemes = []
-        for id, title in self.themeManager.themes:
-            title = self.request.get('theme_%i' % id, title)
-            editedThemes.append((id, title))
-
-        self.themeManager.themes = editedThemes
-
-    def _deleteThemes(self):
-        editedThemes = []
-        for id, title in self.themeManager.themes:
-            if not self.request.get('theme_%i' % id, None):
-                editedThemes.append((id, title))
-
-        self.themeManager.themes = editedThemes
