@@ -4,6 +4,9 @@ History of this buildout
 5.1.14 (unreleased)
 -------------------
 
+- Remove MinaraadConfigletView. Used to CRUD themes.
+  [coen]
+
 - Add CT theme (folder)
   [coen]
 
